feat(telegram): replace telegramChatId with userNotificationId in BuySignal and related classes